<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addorupdatestuff.AddOrUpdateProviderFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView

            android:id="@+id/addProfileImg"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_girl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/providerIdTxtInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/id_txt"
            android:layout_marginTop="8dp"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addProfileImg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/providerIdEdtTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/providerFirstNameTxtInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:layout_marginTop="4dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="@id/providerIdTxtInputLayout"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/providerIdTxtInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/providerIdTxtInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/providerFirstNameEdtTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
          />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/providerFamilyNameTxtInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/family_name_txt"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:layout_marginTop="4dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="@+id/providerFirstNameTxtInputLayout"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/providerFirstNameTxtInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/providerFirstNameTxtInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/providerLastNameEdtTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            />
        </com.google.android.material.textfield.TextInputLayout>
<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_32sdp"
    android:layout_marginEnd="@dimen/_32sdp"
    app:layout_constraintEnd_toEndOf="@id/providerFamilyNameTxtInputLayout"
    app:layout_constraintHorizontal_bias="1.0"
    android:layout_marginTop="8dp"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    app:layout_constraintStart_toStartOf="@id/providerFamilyNameTxtInputLayout"
    app:layout_constraintTop_toBottomOf="@id/providerFamilyNameTxtInputLayout"
    android:id="@+id/providerEmailTxtInputLayout"
    >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/providerEmailEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_prompt"
            android:inputType="textEmailAddress"
 />
</com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="4dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintEnd_toEndOf="@id/providerEmailTxtInputLayout"
            app:layout_constraintStart_toStartOf="@id/providerEmailTxtInputLayout"
            app:layout_constraintTop_toBottomOf="@id/providerEmailTxtInputLayout"
            android:id="@+id/providerMobileTxtInputLayout"
            >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/providerMobileEdtTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_prompt"
            android:inputType="phone"
 />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/gender_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autoSizeTextType="uniform"
            android:text="@string/gender_txt"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@id/providerSpecialityLayout"
            app:layout_constraintTop_toBottomOf="@+id/providerSpecialityLayout" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/providerGenderRadioGroup"
            app:layout_constraintVertical_bias="0.501">

            <Button
                android:id="@+id/cancelAddOrUpdateProviderBtn"
                style="@style/CancelButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:hint="@string/cancel_btn_txt"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:textColorHint="@color/colorWhite" />

            <Button
                android:id="@+id/addOrUpdateProviderBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/add_txt"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:textColorHint="@color/colorWhite" />
        </LinearLayout>


        <RadioGroup
            android:id="@+id/providerGenderRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/gender_txt"
            app:layout_constraintEnd_toEndOf="@id/providerMobileTxtInputLayout"
            app:layout_constraintStart_toEndOf="@id/gender_txt"
            app:layout_constraintTop_toTopOf="@id/gender_txt">

            <RadioButton
                android:id="@+id/femaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:checked="true"
                android:text="@string/female_txt"
                tools:layout_editor_absoluteX="136dp"
                tools:layout_editor_absoluteY="154dp" />

            <RadioButton
                android:id="@+id/maleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_txt"
                tools:layout_editor_absoluteX="136dp"
                tools:layout_editor_absoluteY="154dp" />

        </RadioGroup>

<!--        <TextView-->
<!--            android:id="@+id/specialitytxt"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:drawableEnd="@drawable/ic_ambulance"-->
<!--            android:drawablePadding="5dp"-->
<!--            android:text="@string/speciality_txt"-->
<!--            android:textColor="@color/colorPrimary"-->
<!--            app:layout_constraintStart_toStartOf="@+id/providerMobileTxtInputLayout"-->
<!--            app:layout_constraintTop_toBottomOf="@id/providerMobileTxtInputLayout" />-->

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:layout_marginTop="4dp"
            android:hint="@string/speciality_txt"
            android:id="@+id/providerSpecialityLayout"
            app:layout_constraintStart_toStartOf="@+id/providerMobileTxtInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/providerMobileTxtInputLayout"
           >

            <AutoCompleteTextView
                android:id="@+id/providerSpecialityAutoCompleteTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>