...
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:hint="@string/code_txt"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:id="@+id/code_id_text_input">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/code_id_edt_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
         />

</com.google.android.material.textfield.TextInputLayout>
...
    app:layout_constraintEnd_toEndOf="@id/code_id_text_input"
    app:layout_constraintStart_toStartOf="@id/code_id_text_input"
    app:layout_constraintTop_toBottomOf="@+id/code_id_text_input"
    >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/code_description_edt_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
 />
</com.google.android.material.textfield.TextInputLayout>
...
